# ChangeLog for dev-python/django-extensions
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/django-extensions/ChangeLog,v 1.14 2015/04/08 12:01:37 jlec Exp $

*django-extensions-1.5.2 (08 Apr 2015)

  08 Apr 2015; Justin Lecher <jlec@gentoo.org> +django-extensions-1.5.2.ebuild:
  Version Bump

  01 Mar 2015; Justin Lecher <jlec@gentoo.org>
  -django-extensions-1.0.2-r1.ebuild, -django-extensions-1.3.3.ebuild,
  -django-extensions-1.3.7.ebuild, django-extensions-1.4.0.ebuild:
  Drop old; remove USE constraints from django

*django-extensions-1.5.0 (27 Feb 2015)

  27 Feb 2015; Justin Lecher <jlec@gentoo.org> +django-extensions-1.5.0.ebuild,
  metadata.xml:
  Version Bump, fixes #476762 (python3 support) and #538038 (Uneeded dependency
  on db support in django)

  28 Nov 2014; Pacho Ramos <pacho@gentoo.org> django-extensions-1.4.0.ebuild:
  Support python 3.4

*django-extensions-1.4.0 (12 Oct 2014)

  12 Oct 2014; Johann Schmitz <ercpe@gentoo.org>
  +django-extensions-1.4.0.ebuild:
  Version bump of django-extensions

  01 Jun 2014; Ian Delaney <idella4@gentoo.org> django-extensions-1.3.3.ebuild,
  django-extensions-1.3.7.ebuild:
  delete duplicated entry in deps, observed by Arfrever

*django-extensions-1.3.7 (27 May 2014)

  27 May 2014; Johann Schmitz <ercpe@gentoo.org>
  +django-extensions-1.3.7.ebuild:
  Version bump of django-extensions to get rid of django warnings about
  json/simplejson imports

*django-extensions-1.3.3 (26 Mar 2014)

  26 Mar 2014; Ian Delaney <idella4@gentoo.org> +django-extensions-1.3.3.ebuild:
  bump; add py3.3 support, add IUSE test, tidy deps, add REQUIRED_USE settings
  to cater to USE flags supporting only py2 capable deps

*django-extensions-1.0.2-r1 (22 May 2013)

  22 May 2013; Ian Delaney <idella4@gentoo.org>
  +django-extensions-1.0.2-r1.ebuild, -django-extensions-0.5.ebuild,
  -django-extensions-0.8.ebuild, -django-extensions-1.0.2.ebuild: