@@ -4,27 +4,29 @@ Hash: SHA512
 DIST django-extensions-1.4.0.tgz 185140 SHA256 04591eb842c21feb9441bda02b70be62760c2126acb33ad644fd40b967480145 SHA512 bbbbc641b8d1423f0365c6fa2467e5c93133c47cf84b629101f08ea4fac4d53f04d5ca75fd6d3fafae4160124d1c6e67a8da764c37432a65aaa95adfb8277b4d WHIRLPOOL f3689ef5f45f89a38a0a6c030fd9205ed8051c25766e9c7c1018acd5cb28cc92b8fe2e909a05c0d1b1250cb07ddf182d48791ee51a9faa6229cfc25125c03056
 DIST django-extensions-1.5.0.tgz 193691 SHA256 4922bab0ba7d25801f23d55ed9fd40eeb884e3b81e196a7b22f0720b9741e5f3 SHA512 9045b3c9ce83038462d797a81e17ab15959e6100519f7df08420bf3aa85e1fa542942a00af889bef62ca300f06d64fbdc8ab8e4da74fd067f5b34385689f04c1 WHIRLPOOL f54837321aaa49c0d8bd37527a4193b024594e8ceef5a94f44b54d3903237007b4dff47a0dd057db16456afdef05fde47bbf3b471ea465cf0b70198a2cdcaf3f
 DIST django-extensions-1.5.2.tar.gz 399105 SHA256 6b28b2b1029ca5891cc46303df7ce6a53f425b508b5633d188f612d54545b401 SHA512 9cf904397c3a1c7f924e23d9609e126bdcc19084b6d2aa7b9f1b7dfb88c8dfd0aa6c4686fab27747ed8dafb16dcc16c24a39e5b8fe29fa055f9feed5553ea86d WHIRLPOOL ae7657495a22cd5fdf8d5b6de5a893baa8215c22015997f048960d5820e932648af43e0dfdf99485134355c4fcdbed7da9c5e3a200e449571b39f7c8ae54ac3e
+DIST django-extensions-1.5.3.tar.gz 399785 SHA256 b88d4773697a16a0a2a9ba6fcb082c6c51ec9543ca0f634541680fec4a6867b1 SHA512 3fba49653e2120c0862f475502d5f9a52ddd57f7599eef4295591ff1bc744919d3a8e6a15752d3603a5843bea23362f1ec60a923e6aac05e5692be71d9f99dac WHIRLPOOL d0bc3c51bb42b09031c993526606d4df87266448b56f42daf5e76594c075c2f3dad4c89c4bfaa4fe5963e67ca987bd34cefb995d04de5bba693bfbdb7b8a9ae5
 EBUILD django-extensions-1.4.0.ebuild 1638 SHA256 68841263990341081a04335aa9ae7dbf350077d347c803f9283374f65077319a SHA512 5d99ca6b1fdebada81deb76ea7a96959bc0bf17b26a52ec56afe2dd72a21a54314949c44db24900c91a0203de1cf05923c4bd253e756de81ce57bc2a81be339a WHIRLPOOL 33fead2b9bdb2eb49620907a1dc03c75e1da8100ca08ec361bb7df8fbf1c5e9c16588c4e6784ad3aaa27abddc204d029c3ffa6dc8850c9cbfe27b890f52af975
 EBUILD django-extensions-1.5.0.ebuild 1915 SHA256 c20ce055b3631e827beb549bb2cbbfd54271d2118dba151a428dac7c72ac625e SHA512 b45b26a48f5d0dede8cc1664d881eded561b4ce50985896265e0640af54840e1213e68498e5840f299b9ed14af15f091564f1a7cb40a198798fdd4bbcf6bc277 WHIRLPOOL 40fe392f099afed57d41dd60186fda89b1993ef2578b400cad8c5955a6c48a9cef480c3f872cfc4d19d2cbee81fc2fdbe320305804dbe1cfae97bc4e953a0017
 EBUILD django-extensions-1.5.2.ebuild 1795 SHA256 89b288c5a168dff04aeba82b88e68cbbee59b6b06667c9f519816e27f5d15fb4 SHA512 d2927104f48e548ed24a354b2fab8d0c1175903693fe904005c1bbf10260bafa1579a96484e5600854c448f09febc2be7ae531f3974f90a2161625f12902d8de WHIRLPOOL 33adfeca280abaed69259d1ce71de99dbe2bf30c1287ef48a570aa9a58178ec48bee8d28d1e47d9908eddd2119818eb4d1ad75952cbcca70ad086f7d5ae1f852
-MISC ChangeLog 2809 SHA256 33cbff0918968768aba9e4d5f70b378c59fffc8764d93fe3d3a500a5d4b849e3 SHA512 d33c0a68cc5afc19a0c643525371ea56238f01b4c52a9c9fe356044d3e3b56a0d50f7e01c1a91ece23fe0f6f4f98eea56cc3edf82fe853d5a528d7656f46d434 WHIRLPOOL eb64e51a25d0c245b2c061d8af1db56ddc1eeade1f8d363329dd821808fc6ca307139e3a7bf8bbe847318b4ab9e8ab4f665cf399e803d14126dfb57b1936ab38
+EBUILD django-extensions-1.5.3.ebuild 1795 SHA256 f17f9c19ae5a75732800edef9915db0250191cc94597f738a3aae29a79b6f0c7 SHA512 d6ef25d3baac5f1fdf6588a71d2fd30f20ff28e084043a18ac755db870fcdd3593ad75b98aeac1c84251420e8226340a8b38582045e315e38731b3c56e4dc8bd WHIRLPOOL 5188bca783bb073bd54477bcf23e7325d7e5419c5d1e738a67c9c82c6a30b4e213ee30772928d734e8d9747522aad40bc2cdf9c7a90a831023a79198e917bb86
+MISC ChangeLog 2945 SHA256 a6a9ee92d39e8e923a0a585727f57e77e2d3e5b72f937540393dbcc07a2e2270 SHA512 fdc7194baa1b0c4fc03344308029e58bb34684f5e985c8b2144f03b09a60b4bc91749befe08dce27ecd10f25033a23c8ef497550140969479cbf898f0cb65975 WHIRLPOOL 1a437bc9fec42cadcc8a1bbdbb772ef29ecf760c962e0d31cbe737a49b5ac8437a42116cb26aaff96b95a0e9281a3557ca8f98eb1a7278ca42f7e2f1ca19af40
 MISC metadata.xml 530 SHA256 10a828563b307a05cccaf13544018c89e92cdcff5e9fac89ca9434a563109866 SHA512 91483e5b7d3dc249fb81ee7c33c3abbde011633ecec42b1feab3b63067e0db97ad7712dc78a620adb8d45fe645d54781667f20e06c590aba3fe4bbff995d2680 WHIRLPOOL 449b7db781d9ef84ce9c0926c0a5f8913c464362592826120334ee26dafb5396a96a936a352a293ad0a8df29bae62cbe360d8f3f41f0da7f5e641bb18cd3d3c5
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0
+Version: GnuPG v2.1
 
-iQJ8BAEBCgBmBQJVJRiiXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQJ8BAEBCgBmBQJVSa8TXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQyQ0JDQjFGMzBDQ0UxMjFGNENDNDgxMDdC
-OUQ0RjIzMUJEMTU1OEFCAAoJELnU8jG9FVirgr0P/1l8QzuyhLYqOx9XFuGEhWgh
-+PYPzenZ4oix96mPXF8EJu40XMVNzamxx0jh+gNiJWfLQdJ+l96Rd4QQhh694UGW
-efTY/ddSCQBYM3wrxkizMQngISmIZ6NN3BzvjQrgtlUgfX/vfCXYPLazAvJEoePj
-9TfcbeigJGW2gKvV5U8YF0E3e034emVqwg9D0+9eazaIiQfqe/rDHHFZne95FBIX
-T8Y/SA33GfvEMco2dSKJ9BAYnIu9zMU8AMBuBb2Rf2bUcrz5WW41zbiijBUlFdIl
-HC7kINx3yAWhsiSw4lydMFCGsRK6j7OmBwbGfri4MyTP82ILaEZI3y+lWT6bsOQE
-p/dH6L32nNyU96n3pR0ABrhw7H1n5ITxuZb5e8RzanfZM70lKSxzBWdfO7ROoOyP
-2ZfIZZZOU8x2l5PB/4sqgF+Z3/Igf5xyKiyNDedfjCoMNS9AKsaNFNzeALmriRpf
-lskH+UBURGdzG77XiBgOCIs61t/M7o9Y0fjF1ZjDDafUPcT9oR5cG7eYYOkfDGuQ
-lVNVn0LeIQQ4kmjNL2dg+UVlth+EYsLGDxBqRGX0W2dfLhSe45cJQGdWV8TbWlDX
-z2+ha90/diYugf0y1VX1tXiK+j1pZcPdMQjEktOjwtWCPnNFAqVHG84ATiXXCQaU
-/fRV5SZKCQL2A/JnPn/z
-=MpYd
+OUQ0RjIzMUJEMTU1OEFCAAoJELnU8jG9FVir0BUP/ihuaVePAdOmVpatdt9PPKco
+s47UbNaUy2ORddGYVpXQSXwRcBsejeb+mfRhpTYOXuH6XMxLyM3Yjjp5eizwK/JK
+llJbifwpOY5QacftuaDYupak4zGsjdco7QP+N2NOQC7DNCO/RpPHl+8fVxKf+ITw
+cmcpR9Jg7JpWGNayEA8qIw9a1GkkAqIWHXhVhGlCjmxjuf/yFYKMXNemsb5uH6Gy
+mcMJydHocO/kAwgegonwgFMG/ARq3dKdMzyElrFBRI3rSlw95a2mVGtBXPsF6ppj
+VHTla3AKiGd1o9Vkn2cQnKPm3gaCAo5imp6OVe546FsrtgqzYHtuqQMOyMDPFdPK
+vjcmXdnS+dfDZpXgPhNaGwlxJQyyTvGVwyJ5w8+v5Ih7We3t+FD44Gyl+tsivg9N
+wcsWDlzfy74lFEvRQNeqkZn1xpLQ4z4FTvCu1ti2YtqMLeKIG8RxZO2fUNHw/OWY
+HobkKKkzcQBOBWPefE+FuRrirJoTRyj0Znp9yNhL/eH/GYrsjPoYqViz2Luz9WhT
+P5U44b/Reps/eiKaUiTYlSIHpxPuKBv5CEiJs1+iUrctjpA7+TJ8hXVfdg+2nQ6T
+FUjOKdZrdxG1VdOdguqg0I/fIogXkNbcF9Vk7BcfytBLQs5gErWhiRB/tvMCus9z
+JndUl39xl8JMTnG52q+f
+=mi1u
 -----END PGP SIGNATURE-----
