@@ -1,13 +1,13 @@
 DEFINED_PHASES=compile configure install prepare test
-DEPEND=>=sci-libs/amd-1.3 sci-libs/suitesparseconfig virtual/blas cholmod? ( >=sci-libs/cholmod-2 ) virtual/pkgconfig doc? ( virtual/latex-base )
+DEPEND=>=sci-libs/amd-1.3 sci-libs/suitesparseconfig virtual/blas cholmod? ( >=sci-libs/cholmod-2[-minimal] ) virtual/pkgconfig doc? ( virtual/latex-base )
 DESCRIPTION=Unsymmetric multifrontal sparse LU factorization library
 EAPI=5
 HOMEPAGE=http://www.cise.ufl.edu/research/sparse/umfpack
 IUSE=doc +cholmod static-libs
 KEYWORDS=amd64 ~arm hppa ~mips ppc ~ppc64 x86 ~amd64-fbsd ~x86-fbsd ~amd64-linux ~x86-linux ~x86-macos
 LICENSE=GPL-2
-RDEPEND=>=sci-libs/amd-1.3 sci-libs/suitesparseconfig virtual/blas cholmod? ( >=sci-libs/cholmod-2 )
+RDEPEND=>=sci-libs/amd-1.3 sci-libs/suitesparseconfig virtual/blas cholmod? ( >=sci-libs/cholmod-2[-minimal] )
 SLOT=0
 SRC_URI=http://dev.gentoo.org/~bicatali/distfiles/umfpack-5.6.2.tar.bz2
 _eclasses_=autotools	999c8f6cf5d91495cb0779588f20716c	autotools-utils	3727db64c7b960903d5033280f108080	eutils	9fb270e417e0e83d64ca52586c4a79de	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92
-_md5_=821cd5e53236bd82d9df7aed1d591ae0
+_md5_=bec2f2a48bfa42c0e318d8e88045984a
