@@ -1,17 +1,29 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA512
 
 AUX umfpack-5.2.0-autotools.patch 18317 SHA256 1fc1b6465d73582e61c0782b2d44f3b4e0f73ff22de9f65ffcdfc537c04d1452 SHA512 1b6f53c7d4d53a0cdca754c69d56002c5c1461b2cf48c72b673f5de801b52dec9f14e5ec6fd523ff2601ee326d532e78dea045fc280cea7c92d473eb6c9b0b28 WHIRLPOOL d9a692611d907b20a42a024b6cb692d20f46b98956b5674538ba4c38e57fec2956daaed5cef76c9fedf67bd33a2c0b6181b5f110b5bc508e169cc8613396392f
 DIST UMFPACK-5.2.0.tar.gz 1122066 SHA256 cdf1061c551625f7d572f6f887bad978b4e0e90c6e448a08013ba72c95691c1c SHA512 cd9186ae4feb5c935883ec149c7cdccce980d383bcec33a40d96bd3bc7e0a10ea9d80e678eb689f5eb495acdd320bbee97593a06d1211f05a0ec4a188045939d WHIRLPOOL 9a790a8f5170f0b42bbc75e75c8a2ff851c697276be4865f8edb6e33842df7d78bece6f115eed599c3b64fd489d68a51d4899c98ded683d4ed8edbb3151dfd70
 DIST umfpack-5.6.2.tar.bz2 780204 SHA256 bac722dd5e715c3312ebe7927c05df2e19bc2a29d7e4ab57d0a98330d03164ed SHA512 7b206235e837e84885c871322c1f0d4378a048008d9c110bd96204e9bc1bd9c72c6909da513fd78b6225fddc7b91e1ceebf1a5147e99943b3f0fff48682403dc WHIRLPOOL fe5069dbbd4b21a3569ae8d81d55feb789b06f7afb4c39be67101fca65e601ac49a4ed455c7e85d7a5504d2f50ff18ec67c3bc02dd3d9635dea4200ffcaad4f5
 EBUILD umfpack-5.2.0.ebuild 1128 SHA256 63f25d1017d1093ba16f216ced55197e0eca8c29092db78a2c207c4a1986148e SHA512 a661efd1aad00bc1220b4d3439c2bad5c4006647aabca46fc6fc98e59b4ec64399971568bd6758684ab7df0170c99a807fb355faf163879ad9c28be8d0d9bb7b WHIRLPOOL 4b3e801d0ab3eaf6aa0fad7eae25e8d18370bcef607117378d2fa70da31531692d8858ebb644239932e3acad94723252ec52f92f32c8d46e3023a6c07fc9656a
-EBUILD umfpack-5.6.2.ebuild 971 SHA256 dbae8c8c8e566954436a41eea707fb5928da29851e9d8cce4e0ba27ffe620e2a SHA512 3afb681de4c709cfde3afa6d4446ac8e7f25d38970773a89ebc0ad039bc5d0efe26fdf105c326c8acd1a0e9b22da46565cfe59748e1f1d3f7a986af004b4a89a WHIRLPOOL 0c4d78eb89afb8728faa33bd02a81863dbeb7e511e0dba4689949c057aad6f17e86f064160a8a9180e38b3e01806f84b30aff465efc34c972a2bb3e1a0c17775
-MISC ChangeLog 8118 SHA256 dd13fb77e71aaca0d2dce5890a001405827386f61a6fe6c4299a425d386e72ce SHA512 8226b9cea5944ee85daf0cb5a59574b4a4bf37ae6a842ceffcad3585c3a43ce0aede79e07cb05fe4867b182a0b2e8ed3614e7df6db2d4d15fb25972bf9447779 WHIRLPOOL 22988c902a7b6a367faca1f99f6a7e9f1e7e2c8fad4a33239ce939b4c2c4db3d12071dd0bc792efceafa810e0a0b3770421a577da98a65dd1fe14505770f6e1f
+EBUILD umfpack-5.6.2.ebuild 980 SHA256 d8ba788e8bdb5cfdb805239234bf3ccfffa51ad115725d1d7c797191f865b20a SHA512 df7b4f23fff6dc76a7128bdfed1379d446c6045806d8c9d31b7351355a8c4b60d1746e51b0d5cf1ad7adbd989ad381507fac7eea50191f260ad9c9b6ef47a013 WHIRLPOOL bbc37e516fd47b1e00eadee455eeeb910f195682b4acfcec2713afb131e6d292ef736f853968dff865adcf1b43544f807e3270aa6b022df98faf877fecbe383a
+MISC ChangeLog 8261 SHA256 013b3b4d581e11202dc6ab340602b91164666d2ad9c3fb72047e43a235da909d SHA512 57b735568d477bc31ea7515adaa3e1d18f9d8f2f2d03ffa554538eac277ca8783b88cab6486aedbc1109c6bc34cc00fe5ee8866a9ea8a6538715076f23ff7cd9 WHIRLPOOL 26aeb14edc45d81353677b8ce52c0bb2b5e937199c8957ca72db83993aa3b55fa623694a2633b103f1d1762a183718fcbb84f74bd9a16791db7c1bca7fc9fbc2
 MISC metadata.xml 566 SHA256 93a48938fb0fdba5af024e1468ca57797073ec471552da4dd6cd644c06949346 SHA512 33d1a10b83d277074f9e7a914e68bde4ae474b6055037f1e4cf439671e89759c5c7ae3fbdc95c68411833f84ff36afafe64548d9200b763d17254d5f3e5cedbc WHIRLPOOL efc338f414b1c60c0cbfd340cde7287653598febfa934fde5f093fd0e726f88e85de1b5ffd17b9a90bf5e2e7997e055bb97059524a23dd2ed07ffdbab41a7d80
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2
+Version: GnuPG v2.1
 
-iEYEAREIAAYFAlU9IA8ACgkQCaWpQKGI+9S59ACeK8u/8y1b/chao9yHPhnddJb5
-IF8An1o0EEiUm07n82PmPKpMPOZhIb+W
-=dpFc
+iQJ8BAEBCgBmBQJVSbRzXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQyQ0JDQjFGMzBDQ0UxMjFGNENDNDgxMDdC
+OUQ0RjIzMUJEMTU1OEFCAAoJELnU8jG9FVir2dQP/1KFVYzeJV24g+dnksE38NBZ
+yXtNAzsxyY1neJHnX+k57Xp+ciutUqBOB5ReEXV9iKykFWFFnhAp0mSrVELJwn02
+bmT34QrisdOYvfFwr6lJLO/iyiaL02/D53Wgv3KaZVuCRESItI2CkQBf/p9bBunp
+z/4JwS7gKM90tooSkNsE0jqc2VRcFNsS6RPrfj8isJvUNTA/4aBFmmb42jFtrH77
+iLZXsBdiD8ZPJ1WFPzTUMgMUF0Jfszr5oQo5haOZVe5Jg7km2dM8VmJIROUgxnRw
+lsTZrM3yHwCNIFNh77XX0W2FtLcAyP3Yx8VsBURHEAwAVtPk6fkJvkfipg6YY+i9
+CsajsL25Qq8s/piKAEYfDHooNWA6GifZvxF7LkFDGgU5UdMNqDg8OaQ4Qq/GFVr8
+1YoqGz6z9lLY7ihyCu3hhRliUXLtUonIXPzv9aHcWwi6kyR/T3eBid3OJ1zUBJRH
+I7G36wae1hv+AiwlXEaAiF87RDJfsfBdb7+Rf9ykOu4OLcLI8/Ej4V0CT+E8hHhM
+EYBgQKrZskz5IsPMNzz8XL/BwYGxMAXZDX9TJpUrYC3fjtgBhn9ruQyG2wItrNTM
+yksfCoeYxO4tqDAEN8lGvAK5tOk8rPHQ6YQRICOEdvTqwXi/lJrHUu1q5J75n9PQ
+h1gku6/DDbsqoquNdNFk
+=gwFp
 -----END PGP SIGNATURE-----
