@@ -1,6 +1,9 @@
 # ChangeLog for sci-libs/umfpack
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-libs/umfpack/ChangeLog,v 1.57 2015/04/26 17:27:41 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-libs/umfpack/ChangeLog,v 1.58 2015/05/06 06:28:02 jlec Exp $
+
+  06 May 2015; Justin Lecher <jlec@gentoo.org> umfpack-5.6.2.ebuild:
+  Require full cholmod library functionality for USE=cholmod, bug #547526
 
   26 Apr 2015; Pacho Ramos <pacho@gentoo.org> umfpack-5.6.2.ebuild:
   ppc stable wrt bug #534650
